--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,74 @@
 html {
     font-size: 62.5%;
 }
+/*data in css to tests*/
+.mainPage {
+    width: 100%;
+    background-color: #e8f0ff;
+    margin: 0 auto;
+}
+
+nav {
+    background: #f2f6ff;
+}
+
+nav ul {
+    padding: 0;
+}
+
+nav a {
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    padding: 1rem;
+    color: #000;
+}
+
+nav a:hover {
+    background-color: #fff;
+}
+
+@media screen and (min-width: 35rem) {
+    nav ul {
+        display: flex;
+    }
+
+    nav li {
+        flex: 1 1 0;
+    }
+}
+
+#main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row;
+    height: 18rem;  
+}
+
+
+#aboutTechnology {
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row;
+    height: 20rem;
+}
+
+
+.firstBox,.secondBox,.thirdBox {
+    height: 10rem;
+    background-color: aliceblue;
+    flex: 1 1 0;
+}
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row;
+    height: 20rem;
+}
+
+.fourthBox,.fifthBox {
+    height: 10rem;
+    background-color: aliceblue;
+    flex: 1 1;
+}
