--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
-@import url(reset.css);
 
 html {
     font-size: 62.5%;
+    font-family: 'Lato', sans-serif;
 }
-/*data in css to tests*/
 .mainPage {
     width: 100%;
-    background-color: #e8f0ff;
+    max-width: 160rem;
+    /* background: #FF8100; */
     margin: 0 auto;
 }
 
 nav {
-    background: #f2f6ff;
+    background: #068587;
 }
 
 nav ul {
@@ -27,7 +27,40 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #fff;
+    background-color: #4FB99F;
+}
+
+.aboutMe {
+    background: #08BABD;
+    padding-top: 1rem;
+}
+
+.aboutTechnology {
+    justify-content: space-between; 
+    background: #EF6B30;
+}
+
+.firstBox,.secondBox,.thirdBox {
+    height: 25rem;
+}
+
+.socialMedia {
+    justify-content: space-between;
+    background: #E05A2B;
+}
+
+.fourthBox, .fifthBox {
+    height: 30rem;  
+}
+
+footer {
+    height: 15rem; 
+    background: #B61173;
+}
+
+
+@media (min-width: 96rem) {
+
 }
 
 @media screen and (min-width: 35rem) {
@@ -38,39 +71,4 @@ nav a:hover {
     nav li {
         flex: 1 1 0;
     }
-}
-
-#main {
-    display: flex;
-    flex-wrap: wrap;
-    flex-flow: row;
-    height: 18rem;  
-}
-
-
-#aboutTechnology {
-    display: flex;
-    flex-wrap: wrap;
-    flex-flow: row;
-    height: 20rem;
-}
-
-
-.firstBox,.secondBox,.thirdBox {
-    height: 10rem;
-    background-color: aliceblue;
-    flex: 1 1 0;
-}
-
-section {
-    display: flex;
-    flex-wrap: wrap;
-    flex-flow: row;
-    height: 20rem;
-}
-
-.fourthBox,.fifthBox {
-    height: 10rem;
-    background-color: aliceblue;
-    flex: 1 1;
 }
