--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,7 @@ nav a:hover {
     background: #fff;
     height: 55rem;
     margin-left: 4rem;
+    justify-content: space-between;
 }
 
 article h1 {
@@ -56,7 +57,7 @@ article h2 {
     text-transform: uppercase;
 }
 .aboutMe p {
-    display: flex;
+
     font-size: 1.5rem;
     line-height: 2rem;
     color: #585858;
