--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,7 +168,12 @@ article h2 {
     color: #545454;
     margin-left: 6rem;
     margin-top: 1.5rem;
-    margin-bottom: 5rem;
+    margin-bottom: 8rem;
+    
+}
+
+h4 span {
+    transition: all 0.5s;
 }
 
 h4 span:hover {
@@ -176,11 +181,11 @@ h4 span:hover {
 }
 
 .linkedIn{
-    background-color: #5364ae;
+    background-image: linear-gradient( #556ac6, #5364ae);
 }
 
 .gitHub{
-    background-color: #59489d;
+    background-image: linear-gradient( #624ac4, #59489d);
 }
 
 .button {
@@ -189,19 +194,27 @@ h4 span:hover {
     width: 44rem;
     height: 8.5rem;
     border-radius: 4rem;
-    
+    cursor: pointer;
+    transition: all 0.5s;
+    border: none;
+    box-shadow: 0 0.15rem #999;
+
 }
 
 a.button {
     font-size: 3rem;
-    padding-top: 2.5rem;
+    padding-top: 2.6rem;
     text-decoration: none;
     color: #fff;
     font-weight: bold;
-    margin-top: 4rem;
+    margin-top: 5rem;
     text-align: center;
+    display:block;
 }
 
+a.button:hover {
+    color: #6fbf49;
+}
 
 footer {
     height: 20rem; 
@@ -228,6 +241,7 @@ footer {
     text-decoration: none;
     font-size: 2rem;
     color: #6fbf49;
+    transition: all 0.5s;
 }
 
 .myEmail a:hover{ 
